// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoxscorePlayer when creating a team from a server response parses and assigns data correctly 1`] = `
BoxscorePlayer {
  "isKeeper": false,
  "isLocked": true,
  "player": Player {
    "eligiblePositions": Array [
      "QB",
      "Bench",
    ],
    "firstName": "Aaron",
    "isActive": true,
    "isIREligible": false,
    "jerseyNumber": "12",
    "lastName": "Rodgers",
    "leagueId": undefined,
    "percentOwned": 99.21669,
    "percentOwnedChange": 0.23744,
    "percentStarted": 74.42904,
    "playerId": 8439,
    "seasonId": undefined,
  },
  "position": "QB",
  "projectedPoints": 20.46,
  "projectedStats": BoxscorePlayerPointStats {
    "lostFumbles": -0.47,
    "passing2PtConversions": 0.19,
    "passingInterceptions": -0.76,
    "passingTouchdowns": 7.87,
    "passingYards": 11.21,
    "rushing2PtConversions": 0.01,
    "rushingTouchdowns": 0.67,
    "rushingYards": 1.73,
  },
  "stats": BoxscorePlayerPointStats {
    "passingYards": 1.04,
  },
  "totalPoints": 1.04,
}
`;

exports[`BoxscorePlayer when creating a team locally parses and assigns data correctly 1`] = `
BoxscorePlayer {
  "isLocked": true,
  "player": Player {
    "eligiblePositions": Array [
      "QB",
      "Bench",
    ],
    "firstName": "Aaron",
    "isActive": true,
    "isIREligible": false,
    "jerseyNumber": "12",
    "lastName": "Rodgers",
    "leagueId": undefined,
    "percentOwned": 99.21669,
    "percentOwnedChange": 0.23744,
    "percentStarted": 74.42904,
    "playerId": 8439,
    "seasonId": undefined,
  },
  "position": "QB",
  "projectedPoints": 20.46,
  "projectedStats": BoxscorePlayerPointStats {
    "lostFumbles": -0.47,
    "passing2PtConversions": 0.19,
    "passingInterceptions": -0.76,
    "passingTouchdowns": 7.87,
    "passingYards": 11.21,
    "rushing2PtConversions": 0.01,
    "rushingTouchdowns": 0.67,
    "rushingYards": 1.73,
  },
  "stats": BoxscorePlayerPointStats {
    "passingYards": 1.04,
  },
  "totalPoints": 1.04,
}
`;
